# RoguePM

./: .gitignore  LICENSE  README.md  Rogue.sh  RogueConfig  TODO.md  notes  notes.txt  plan.md  project.sh  rogue  rogue.bak  rogue.sh  rp.list  session.sh  test.md  testtttjlsakj
RogueTemplates/: cloneDefault.sh  templatedupeandrename.sh
RogueTemplates/arduino/: arduino.sh
RogueTemplates/arduino/files/: config.h  sketch.ino
RogueTemplates/assembly/: assembly.sh
RogueTemplates/bash/: bash.sh
RogueTemplates/c/: c.sh
RogueTemplates/default/: default.sh
RogueTemplates/discordBot/: discordBot.sh
RogueTemplates/freecad/: freecad.sh
RogueTemplates/freecad/files/: .gitignore
RogueTemplates/go/: go.sh
RogueTemplates/go/files/: .gitignore
RogueTemplates/godot/: godot.sh
RogueTemplates/godot/files/: .gitignore
RogueTemplates/godot2d/: godot2d.sh
RogueTemplates/java/: java.sh
RogueTemplates/java/files/: .gitignore
RogueTemplates/kicad/: kicad.sh
RogueTemplates/kicad/files/: .gitignore
RogueTemplates/latex/: latex.sh
RogueTemplates/latex/files/: .gitignore  Makefile
RogueTemplates/logisim/: logisim.sh
RogueTemplates/logisim/files/: template.circ
RogueTemplates/manim/: manim.sh
RogueTemplates/manim/files/: requirements.txt  setup.sh
RogueTemplates/micropython/: micropython.sh
RogueTemplates/node/: node.sh
RogueTemplates/processing/: processing.sh
RogueTemplates/pygame/: pygame.sh
RogueTemplates/python/: python.sh
RogueTemplates/react/: react.sh
RogueTemplates/rust/: rust.sh
RogueTemplates/typescript/: typescript.sh
RogueTemplates/verilog/: verilog.sh
RogueTemplates/web/: web.sh
modules/: addRemote.sh  auth.sh  daemon.sh  list.sh  new.sh  new_session.sh  open.sh  setPat.sh  snapshot.sh  template.sh  update.sh
plan/: plan.md  plan2.md
rogued/: Cargo.toml  TODO.md  knownproblems.md  rogued.md
rogued/src/: connections.rs  db.rs  main.rs  types.rs
tst/: .gitignore
(+8 files in other folders)
