[package]
name = "rogued"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
sled = "0.34"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rustls = "0.23"
tokio-rustls = "0.26"
rcgen = "0.13"
mdns-sd = "0.20"
ed25519-dalek = "2"
ssh-key = "0.6"
tokio-stream = "0.1.18"
gethostname = "1.1.0"
local-ip-address = "0.6.13"

[profile.release]
strip = true
lto = true
codegen-units = 1
