[package]
name = "rogued"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
sled = "0.34"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rustls = "0.23"
tokio-rustls = "0.26"
rcgen = "0.13"
mdns-sd = "0.20"
ed25519-dalek = "2"
ssh-key = "0.6"
tokio-stream = "0.1.18"
gethostname = "1.1.0"
local-ip-address = "0.6.13"
dashmap = "6.2.1"
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
bytes = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1
